--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Rachel Han
+name: Qiao
 
 # Short bio or description (displayed in the header)
-description: Rachel Personal Website
+description: Ciao Qiao
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: 'old/avatar.jpg'
@@ -23,10 +23,10 @@ footer-links:
   flickr:
   github: hanqiao69
   instagram: ciao.qiao
-  linkedin: www.linkedin.com/in/hanqiao69s
+  linkedin: anqiao69
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: hanqiao69
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
